Modernize: JDK HttpClient; log4j2; own URLCanon'zer, drop dep chains.